2007-06-17  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bump up version to 0.9.4-pre
	* setup.py: Cleaned up some rpm-specific stuff that 
	  caused problems to Debian packager Mikhail Gusarov
	* setup.cfg: Removed [bdist_rpm] section
	* MANIFEST.in: Include S3/*.py

2007-06-16  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Syntax fixes from Mikhail Gusarov <dottedmag@dottedmag.net>

2007-05-27  Michal Ludvig  <michal@logix.cz>

	* Support for on-the-fly GPG encryption.

2007-05-26  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Add info about "s3cmd du" command.

2007-05-26  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.3
	  ----------------------

2007-05-26  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Patch from Basil Shubin <basil.shubin@gmail.com>
	  adding support for "s3cmd du" command.
	* s3cmd: Modified output format of "s3cmd du" to conform
	  with unix "du".
	* setup.cfg: Require Python 2.5 in RPM. Otherwise it needs
	  to require additional python modules (e.g. ElementTree)
	  which may have different names in different distros. It's 
	  indeed still possible to manually install s3cmd with 
	  Python 2.4 and appropriate modules.

2007-04-09  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.2
	  ----------------------

2007-04-09  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Added manpage
	* Updated infrastructure files to create "better"
	  distribution archives.

2007-03-26  Michal Ludvig  <michal@logix.cz>

	* setup.py, S3/PkgInfo.py: Move package info out of setup.py
	* s3cmd: new parameter --version
	* s3cmd, S3/S3Uri.py: Output public HTTP URL for objects
	  stored with Public ACL.
	  
2007-02-28  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Verify supplied accesskey and secretkey
	  in interactive configuration path.
	* S3/Config.py: Hide access key and secret key
	  from debug output.
	* S3/S3.py: Modify S3Error exception to work
	  in python 2.4 (=> don't expect Exception is
	  a new-style class).