@@ -1,3 +1,7 @@
+s3cmd 0.9.4   -   ...
+===========
+* Support for transparent GPG encryption of uploaded files.
+
 s3cmd 0.9.3   -   2007-05-26
 ===========
 * New command "du" for displaying size of your data in S3.
